# hdrop

./: .dockerignore  .editorconfig  .gitignore  .redocly.yaml  Cargo.toml  README.md  SECURITY.md  api_v1.md  deny.toml  docker-compose.yml  hdrop.code-workspace  run_migrations.sh  rustfmt.toml  start_api.sh
.cargo/: config.toml
.do/: deploy.template.yaml
.github/workflows/: api.yml  deny.yml  web.yml
aws/: buckets.sh
docs/: api_v0.md  api_v1.md  api_v1.yml  features.md  metrics.md  security.md
hausdrop-mock-server/: .env.example  Dockerfile  Dockerfile.development  package.json
hausdrop-mock-server/infra/: entrypoint.sh
hausdrop-mock-server/prisma/migrations/20230130175822_init/: migration.sql
hausdrop-mock-server/src/: DatabaseClient.mjs  FileStorage.mjs  R2Provider.mjs  README.md  S3Provider.mjs  StoredFile.mjs  TokenGenerator.mjs  main.js
hausdrop-mock-server/src/providers/: Provider.mjs
hausdrop-server/: Cargo.toml
hausdrop-server/src/: database.rs
hausdrop-server/src/database/: sqlite.rs
hausdrop-server/src/server/: backend.rs
hausdrop-web/: Dockerfile  Dockerfile.development  package-lock.json  package.json
hausdrop-web/infra/nginx/: nginx.conf
hausdrop-web/public/: index.html  manifest.json
hausdrop-web/src/: App.js  index.css
hausdrop-web/src/api/: ApiClient.js
hausdrop-web/src/components/: DownloadProgress.js  ExpirationPicker.js  FileDropZone.js  Logo.js  PasswordField.js  ShareFile.js  StatusBubble.js  StatusBubbleRow.js  UploadProgress.js  UploadProgressBar.js  ViewFile.js
hausdrop-web/src/state/: atoms.js
hausdrop-web/src/util/: Base64Util.js  CryptoUtil.js  PasswordUtil.js  index.js
hausdrop-web/src/util/crypto/: CryptoUtil.js  DecryptedFileInfo.js  EncryptedFileInfo.js  index.js
hausdrop-web/src/views/: FileDetailView.js  HomeView.js  View.js
hdrop-db/: Cargo.toml
hdrop-db/migrations/2023-03-01-223630_create_File/: down.sql  up.sql
hdrop-db/migrations/2023-06-22-150526_api_v1_0/: down.sql  up.sql
hdrop-db/src/: database.rs  error.rs  lib.rs  models.rs  schema.rs  utils.rs
hdrop-db/src/.archive/: _postgresql.rs
hdrop-server/: .gitignore  Cargo.toml  Dockerfile  README.md
hdrop-server-js/: Dockerfile  package.json  tsconfig.json
hdrop-server-js/infra/: entrypoint.sh
hdrop-server-js/prisma/: schema.prisma
hdrop-server-js/prisma/migrations/20230621005350_api_v0_to_v1/: migration.sql
hdrop-server-js/src/: DatabaseClient.mjs  FileStorage.mjs  README.md  api.ts  core.ts  main.js  main.ts  middleware.ts
hdrop-server-js/src/api/: statusRouter.ts  v1.ts
hdrop-server-js/src/api/v1/: filesRouter.ts
hdrop-server-js/src/core/: AppContext.ts  DatabaseClient.mjs  DatabaseClient.ts  FileDataCache.mjs  FileDataCache.ts  FileStorage.mjs  FileStorage.ts  StoredFile.mjs  StoredFile.ts  TokenGenerator.ts  providers.ts
hdrop-server-js/src/core/providers/: S3Provider.ts  index.mjs
hdrop-server-js/src/declarations/: environment.d.ts  express.d.ts
hdrop-server-js/src/middleware/: authenticate.ts  authenticated.ts  handleErrors.ts  injectContext.ts  validateAccessToken.ts
hdrop-server-rs/: Cargo.toml  README.md
hdrop-server-rs/migrations/00000000000000_diesel_initial_setup/: down.sql
hdrop-server-rs/migrations/2023-03-01-223630_create_File/: down.sql  up.sql
hdrop-server-rs/src/: api.rs  core.rs  main.rs  schema.rs
hdrop-server-rs/src/api/: filesRouter.rs  statusRouter.rs
hdrop-server-rs/src/core/: database.rs  models.rs  postgresql.rs
hdrop-server-rs/src/server/: backend.rs
hdrop-server/infra/: entrypoint.sh
hdrop-server/src/: background_workers.rs  core.rs  error.rs  main.rs  server.rs  utils.rs
hdrop-server/src/background_workers/: background_workers.rs  expiration_worker.rs  metrics_updater.rs  storage_synchronizer.rs
hdrop-server/src/core/: cache.rs  metrics.rs  providers.rs
hdrop-server/src/core/.cache/: _file_data_cache.rs
hdrop-server/src/core/metrics/: monitoring.rs  names.rs
hdrop-server/src/core/providers/: local_provider.rs  on_premise_provider.rs  provider.rs  s3_provider.rs  s3provider.rs
hdrop-server/src/server/: app_state.rs  backend.rs  background_workers.rs  cache.rs  hdrop_server.rs  middleware.rs  multipart.rs  prometheus.rs  prometheus_metrics_server.rs  routes.rs
hdrop-server/src/utils/: parse_and_upscale_to_mb.rs  unit_utils.rs
hdrop-shared/: Cargo.toml
hdrop-shared/src/: env.rs  lib.rs  metrics.rs  requests.rs  responses.rs
hdrop-shared/src/requests/: challenge_data.rs  expiry_data.rs
hdrop-shared/src/responses/: file_metadata.rs  get_challenge_data.rs  upload_file_data.rs  verify_challenge_data.rs
hdrop-web/: .env.example  Dockerfile  package.json
hdrop-web-next/: .env.example  .eslintrc.json  Dockerfile  Dockerfile.development  check_licenses.sh  license_allowlist.txt  license_exclude_packages.txt  package.json
hdrop-web-next/src/api/: ApiClient.ts  Downloader.ts  Uploader.ts  index.ts  request.ts  response.ts
hdrop-web-next/src/app/: globals.css  layout.tsx  page.tsx
hdrop-web-next/src/app/[accessToken]/: page.tsx
hdrop-web-next/src/app/privacy/: page.tsx
hdrop-web-next/src/components/: CopyButton.tsx  DeleteButton.tsx  ExpirySelector.tsx  FilePreview.tsx  Footer.tsx  Header.tsx  NavLink.tsx  PasswordField.tsx  Switch.tsx  index.ts
hdrop-web-next/src/crypto/: AesGcm.ts  Base64.test.ts  Base64.ts  CryptoHelper.ts  DataBundle.ts  Pbkdf2.ts  Sha256.ts  index.ts
hdrop-web/src/: App.js  index.css
hdrop-web/src/api/: ApiClient.js
hdrop-web/src/components/: CopyToClipboard.js  CopyToClipboardWrapper.js  DownloadProgress.js  FileDropZone.js  Footer.js  Header.js  Logo.js  PasswordField.js  ShareFile.js  Spinner.js  StatusBubble.js  StatusBubbleRow.js  UploadProgress.js  ViewFile.js
hdrop-web/src/state/: atoms.js
hdrop-web/src/util/: Base64Util.js  MobileDeviceUtil.js  index.js
hdrop-web/src/util/crypto/: CryptoUtil.js  DecryptedFileInfo.js  DerivedKeyInfo.js  EncryptedFileInfo.js
hdrop-web/src/views/: HomeView.js  SecurityView.js  View.js
prometheus/: alert.rules.yml  prometheus.yml
