[workspace]

members = [
    "hdrop-db",
    "hdrop-server",
    "hdrop-shared"
]

[workspace.dependencies]
thiserror = "1.0"
serde =  { version = "1", features = ["derive"] }
uuid = { version = ">=0.7.0, <2.0.0", features = ["v4", "serde"] }

hdrop-db = { path = "hdrop-db" }
hdrop-shared = {path = "hdrop-shared"}
