[package]
name = "hdrop-db"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0"
diesel = { version = "2.1.0", features = ["postgres", "chrono", "uuid"] }
chrono = {version = "0.4", features = ["serde"] }
uuid = { version = ">=0.7.0, <2.0.0", features = ["v4", "serde"] }
serde =  { version = "1", features = ["derive"] }
sha3 = "0.10.8"
deadpool-diesel = { version = "0.4.1", features = ["postgres"] }
deadpool = { version = "0.9.5", features = ["rt_tokio_1"] }
hdrop-shared = {path = "../hdrop-shared"}
