[package]
name = "hdrop-db"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = { version = "2.1.0", features = ["postgres", "chrono", "uuid"] }
chrono = {version = "0.4", features = ["serde"] }
sha3 = "0.10.8"
deadpool-diesel = { version = "0.4.1", features = ["postgres"] }
deadpool = { version = "0.9.5", features = ["rt_tokio_1"] }

uuid.workspace = true
serde.workspace = true
thiserror.workspace = true

hdrop-shared.workspace = true
