[package]
name = "hdrop-db"
version = "0.1.0"
edition = "2021"
license.workspace = true

[dependencies]
diesel = { version = "2.1.0", features = ["postgres", "chrono", "uuid"] }
sha3 = "0.10.8"
deadpool-diesel = { version = "0.4.1", features = ["postgres"] }
deadpool = { version = "0.9.5", features = ["rt_tokio_1"] }

chrono.workspace = true
uuid.workspace = true
serde.workspace = true
thiserror.workspace = true
async-trait.workspace = true
metrics.workspace = true

hdrop-shared.workspace = true
