[package]
name = "hdrop-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3"
axum = "0.6.18"

serde =  { version = "1.0.152", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
chrono = "0.4.23"
pretty_env_logger = "0.4.0"
uuid = { version = "0.8", features = ["v4"] }
futures = { version = "=0.3.25", default-features = false }
bytes = "0.5.6"
thiserror = "1.0.38"
diesel = { version = "2.0.3", features = ["postgres", "extras"] }
dotenvy = "0.15"
rust-s3 = "0.28"
diesel_migrations = "2.0.0"