[package]
name = "hdrop-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3"
axum = "0.6.18"

serde =  { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
chrono = {version = "0.4", features = ["serde"] }
pretty_env_logger = "0.4.0"
uuid = { version = ">=0.7.0, <2.0.0", features = ["v4", "serde"] }
futures = { version = "=0.3.25", default-features = false }
bytes = "0.5.6"
thiserror = "1.0"
diesel = { version = "2.1.0", features = ["postgres", "chrono", "uuid"] }
dotenvy = "0.15"
rust-s3 = "0.33"
diesel_migrations = "2.1.0"
serde_json = "1.0.96"
