[package]
name = "hdrop-server"
version = "0.1.0"
edition = "2021"
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.18", features = ["multipart", "macros", "headers"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
dotenvy = "0.15"
regex = "1.9"
tower-http = { version = "0.4", features = ["cors", "limit", "compression-br", "trace"] }
bincache = { git = "https://github.com/ZitaneLabs/bincache.git", features = ["rt_tokio_1", "comp_zstd"] }
s3 = { version = "0.37", package = "zitane-s3-async" }
metrics-exporter-prometheus = "0.12.1"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tracing = "0.1.37"

chrono.workspace = true
uuid.workspace = true
serde.workspace = true
thiserror.workspace = true
async-trait.workspace = true
metrics.workspace = true

hdrop-db.workspace = true
hdrop-shared.workspace = true
sysinfo = "0.29.3"
